# image-to-ppm

./: .gitignore  Cargo.toml  README.md
src/: main.rs
